2013-06-28  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* otp-lexer.l: First #include <w2c/config.h> via "routines.h".

2012-11-20  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Avoid use of deprecated INCLUDES.

2012-07-09  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* otp-parser.[ch]: Regenerate with bison 2.5.1.

2012-06-20  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* otp-lexer.l: Added the never-interactive option to prevent
	flex from creating a problematic prototype for isatty().

2011-05-24  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* mkofm: Replace `$*' by `"$@"'.

	* Makefile.am (SUBDIRS): Add win32 to build C programs from
	Akira's W32TeX as WIN32 replacements for the shell scripts.

2010-12-19  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am [WIN32]: Skip mkocp and mkofm shell scripts.

2010-06-10  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Reorganize web2c headers.
	* routines.h: #include <w2c/config.h> instead of <config.h>.

2010-04-07  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* mkocp.man, mkofm.man, otp2ocp.man, outocp.man:
	Uniform manpage formatting: bold for literals, italic for
	variable items, roman for meta items.

2009-10-24  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* mkocp.man, mkofm.man, otp2ocp.man, outocp.man: New files
	moved from ../../tetex/ to here.
	* Makefile.am (dist_man1_MANS): Adjusted.

2009-08-21  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Avoid maximal compiler warnings.
	* otp-lexer.l: Replace global vars i, j, and last by locals.
	* otp-parser.y (yyerror): Constify string param.
	* outocp.c (otp_names): Constify strings.
	* routines.[ch] (store_state): Constify string param.

2009-08-19  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: otp2ocp and outocp must depend explicitly on
	KPATHSEA_DEPEND, the implicit dependency via proglib is not enough.

2009-06-26  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* otp2ocp.test, outocp.test, uni2lat.ocp, uni2lat.otp,